Change beffore adding setup messages.